# vext

./: .gitattributes  .gitignore  .glitterrc  Cargo.toml  README.md  v.mod
.cargo/: config
.github/workflows/: audit.yml  rust.yml
src/: editor.rs  main.rs  main.v
src/cli/: README.md  args.rs  run.rs
src/editor/: README.md  tab_manager.rs
