[package]
name = "vext"
version = "0.1.0"
edition = "2018"
authors= ["Milo123459"]
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
colored = "2.0.0"
anyhow = "1.0.56"
structopt = "0.3.25"
